QA: migrate java functions deprecated in Java 9.