@@ -9,7 +9,7 @@ public class RandomOrderScheduler extends BaseOrderScheduler {
 	public void scheduleOrders(ArrayList<OrderExecutionWrapper> orders) {
         getScheduledOrders().clear();
         while (orders.size() > 0) {
-            int i = new Double(Math.random() * orders.size()).intValue();
+            int i = Double.valueOf(Math.random() * orders.size()).intValue();
             getScheduledOrders().add(orders.remove(i));
         }
     }
