@@ -123,7 +123,7 @@ public class HighlightedHexRenderer extends DefaultHexRenderer {
 		FontMetrics fm = g.getFontMetrics(f);
 		Rectangle2D bb = fm.getStringBounds(str, g);
 		Rectangle b = new Rectangle(((Double) bb.getX()).intValue(), ((Double) bb.getY()).intValue(), ((Double) bb.getWidth()).intValue(), ((Double) bb.getHeight()).intValue());
-		int xt = p.x - new Double(b.getWidth() / 2).intValue();
+		int xt = p.x - Double.valueOf(b.getWidth() / 2).intValue();
 		int yt = p.y;
 		b.translate(xt, yt);
 		RoundRectangle2D rr = new RoundRectangle2D.Double(b.getX(), b.getY(), b.getWidth() + 2, b.getHeight() + 2, 3, 3);
